dice class creation
created the dice class and updated the cod from the main class to call from it

--- a/CET1004_Assignment1.csproj
+++ b/CET1004_Assignment1.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Player_name.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Random_DiceRoll.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
