--- a/CET1004_Assignment1.csproj
+++ b/CET1004_Assignment1.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameRules.cs" />
+    <Compile Include="GameTitle.cs" />
     <Compile Include="Player_name.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
