--- a/CET1004_Assignment1.csproj
+++ b/CET1004_Assignment1.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Random_DiceRoll.cs" />
     <Compile Include="Round_Object.cs" />
+    <Compile Include="WriteToLog.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
